added additions to the BasicPandas tutorial in the patch clamp file

--- a/Scripts/Basics Tabular Data.ipynb
+++ b/Scripts/Basics Tabular Data.ipynb
@@ -671,6 +671,7 @@
     }
    ],
    "source": [
+    "# Creates an overview about the distribution of the data\n",
     "pairplot_hue = parkinson_df.iloc[:,1:10]\n",
     "pairplot_hue[\"status\"] = parkinson_df[\"status\"]\n",
     "sns.pairplot(data = pairplot_hue, hue = \"status\")"
@@ -707,6 +708,7 @@
    ],
    "source": [
     "# retrieve the correlation coefficient between the variables\n",
+    "# you could also use other methods like pearson \n",
     "correlation_park = parkinson_df.corr(method=\"spearman\")\n",
     "sns.clustermap(correlation_park)"
    ]
@@ -740,7 +742,8 @@
    ],
    "source": [
     "# Check the correlation of each variable\n",
-    "# This part will be explained\n",
+    "# First we stack our data\n",
+    "# this formats it from wide to long format\n",
     "correlation_stacked = correlation_park.stack().reset_index()\n",
     "print(correlation_stacked.sort_values(0, ascending = False))\n",
     "correlation_stacked.columns = [\"Var_1\",\"Var_2\",\"correlation\"]\n",
@@ -874,7 +877,7 @@
     }
    ],
    "source": [
-    "# This part could be a question\n",
+    "# Here we remove the double insereted correlation when stacking the dataframe\n",
     "def remove_double_inserted_data(data):\n",
     "    \"\"\" This function can be used to retrieve the indeces of the\n",
     "    doubled data from the unstacked correlation table\n",
@@ -900,10 +903,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# In general this is not really necessary but we will still perform this\n",
-    "# Visualization is crucial to understand if everything works right and makes \n",
-    "# sense\n",
-    "# should write it themself\n",
+    "# Here we draw a scatterplot/regplot with the top correlated features\n",
+    "\n",
     "def draw_correlation_scatter(data, dummies, length = 9, tail = False):\n",
     "    \"\"\" \n",
     "    Function to draw the correlation scatter\n",
@@ -1277,9 +1278,9 @@
    ],
    "source": [
     "# Now let us perform the PCA\n",
-    "# What do you think about this Plot?\n",
     "# How to choose the # of components to use?\n",
-    "# What might be problematic about this implementation right now?\n",
+    "# Based on the explained variance\n",
+    "# You can cleary see that after a certain number of components no real increase in explained variance occurs\n",
     "# What does the standard scaler do?\n",
     "parkinson_pca = parkinson_df.copy()\n",
     "components = parkinson_pca.shape[1]\n",
@@ -1315,9 +1316,8 @@
     }
    ],
    "source": [
-    "# Change the components to identify if there are changes nad how much explained variance should\n",
-    "# be in the data\n",
-    "# what might be the issue here?\n",
+    "# Here we implement the PCA using the scikit learn package\n",
+    "# we create the number of components which is 1 the feature shape of your dataframe\n",
     "pca = PCA(n_components= scaled_data.shape[1] -1)\n",
     "pca_data = pca.fit_transform(scaled_data)\n",
     "pca_explained = pca.explained_variance_ratio_\n",
@@ -1358,8 +1358,9 @@
     }
    ],
    "source": [
-    "# Explain what is visible in this Plot\n",
-    "# Draw the first two Principle Componentes\n",
+    "# Draws the first two components of the PCA as a scatter plot \n",
+    "# Principle component 1 is a the x axis and PC2 is at the y axis\n",
+    "# What does this plot tell you \n",
     "pca_df = pd.DataFrame(pca_data[:,:2], columns = [\"PC1\",\"PC2\"])\n",
     "pca_df[\"status\"] = parkinson_df[\"status\"].tolist()\n",
     "fig,ax = plt.subplots(figsize = (5,5))\n",
@@ -1810,18 +1811,30 @@
    ],
    "source": [
     "# model our data and using a random forest\n",
+    "# import the necessary packages\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import accuracy_score\n",
     "from sklearn.metrics import confusion_matrix, plot_confusion_matrix\n",
     "\n",
+    "\n",
+    "# for a primer in Random Forest see here: https://towardsdatascience.com/understanding-random-forest-58381e0602d2\n",
     "X_train, X_test, y_train, y_test = train_test_split(parkinson_pca.iloc[:,:-1], \n",
     "                                                    parkinson_pca[\"status\"], \n",
     "                                                    test_size=0.20, \n",
     "                                                    random_state=42)\n",
+    "\n",
+    "# here we split the test and train data so that the model is not seeing the data\n",
+    "# here we use the non scaled data --> what would be problematic if we would use the scaled data here?\n",
+    "# Think about data leakage into the test data set e.g\n",
     "rf_model = RandomForestClassifier(n_estimators=200, random_state=44)\n",
+    "# n estimator determines the number of trees that are used in our model\n",
+    "\n",
+    "# we fit the model here\n",
     "rf_model.fit(X_train, y_train)\n",
+    "# predict using our test data set\n",
     "y_pred = rf_model.predict(X_test)\n",
+    "#finally we plot the confusion matrix\n",
     "disp = plot_confusion_matrix(rf_model, X_test, y_test, cmap=plt.cm.Blues, normalize='true')\n",
     "X_train"
    ]
@@ -1846,7 +1859,8 @@
    "source": [
     "# Here we retrieve the feature importance which describes\n",
     "# what data features are important to split the data in thre random forest\n",
-    "# and therefore also are hints which features can be used to distingush\n",
+    "# and therefore also are hints which features can be used to distingush our data conditions well\n",
+    "# We could use this plot for dimensional reduction by getting rid of features that are not that important\n",
     "importances = rf_model.feature_importances_\n",
     "forest_importances = pd.Series(importances, index=X_train.columns)\n",
     "fig, ax = plt.subplots()\n",
