--- a/Scripts/Basics CalciumImaging.ipynb
+++ b/Scripts/Basics CalciumImaging.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "230e9713",
    "metadata": {},
    "outputs": [],
@@ -16,215 +16,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "43225d3b",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Time (sec)</th>\n",
-       "      <th>R1 W1 Avg</th>\n",
-       "      <th>R1 W2 Avg</th>\n",
-       "      <th>R2 W1 Avg</th>\n",
-       "      <th>R2 W2 Avg</th>\n",
-       "      <th>R3 W1 Avg</th>\n",
-       "      <th>R3 W2 Avg</th>\n",
-       "      <th>R4 W1 Avg</th>\n",
-       "      <th>R4 W2 Avg</th>\n",
-       "      <th>R5 W1 Avg</th>\n",
-       "      <th>...</th>\n",
-       "      <th>R7 W1 Avg</th>\n",
-       "      <th>R7 W2 Avg</th>\n",
-       "      <th>R8 W1 Avg</th>\n",
-       "      <th>R8 W2 Avg</th>\n",
-       "      <th>R9 W1 Avg</th>\n",
-       "      <th>R9 W2 Avg</th>\n",
-       "      <th>R10 W1 Avg</th>\n",
-       "      <th>R10 W2 Avg</th>\n",
-       "      <th>R11 W1 Avg</th>\n",
-       "      <th>R11 W2 Avg</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.664</td>\n",
-       "      <td>2445.0492</td>\n",
-       "      <td>3342.0525</td>\n",
-       "      <td>9927.9246</td>\n",
-       "      <td>15184.7836</td>\n",
-       "      <td>16085.5311</td>\n",
-       "      <td>23916.5607</td>\n",
-       "      <td>11463.5574</td>\n",
-       "      <td>18456.5443</td>\n",
-       "      <td>9834.1213</td>\n",
-       "      <td>...</td>\n",
-       "      <td>12912.6907</td>\n",
-       "      <td>25586.4747</td>\n",
-       "      <td>14205.3705</td>\n",
-       "      <td>21684.3443</td>\n",
-       "      <td>11567.6713</td>\n",
-       "      <td>19118.2644</td>\n",
-       "      <td>9622.9311</td>\n",
-       "      <td>19698.8066</td>\n",
-       "      <td>9273.1803</td>\n",
-       "      <td>18630.9607</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1.664</td>\n",
-       "      <td>2424.8689</td>\n",
-       "      <td>3339.6197</td>\n",
-       "      <td>9915.3410</td>\n",
-       "      <td>15203.4295</td>\n",
-       "      <td>16093.9607</td>\n",
-       "      <td>23946.0754</td>\n",
-       "      <td>11476.7541</td>\n",
-       "      <td>18489.5574</td>\n",
-       "      <td>9807.4393</td>\n",
-       "      <td>...</td>\n",
-       "      <td>12909.4293</td>\n",
-       "      <td>25629.4907</td>\n",
-       "      <td>14208.0033</td>\n",
-       "      <td>21716.1049</td>\n",
-       "      <td>11565.6897</td>\n",
-       "      <td>19167.4966</td>\n",
-       "      <td>9621.0131</td>\n",
-       "      <td>19754.7574</td>\n",
-       "      <td>9281.7016</td>\n",
-       "      <td>18690.1311</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2.664</td>\n",
-       "      <td>2422.6590</td>\n",
-       "      <td>3335.8262</td>\n",
-       "      <td>9917.3541</td>\n",
-       "      <td>15201.3541</td>\n",
-       "      <td>16108.5639</td>\n",
-       "      <td>23909.5803</td>\n",
-       "      <td>11449.5836</td>\n",
-       "      <td>18483.8820</td>\n",
-       "      <td>9808.9279</td>\n",
-       "      <td>...</td>\n",
-       "      <td>12908.4587</td>\n",
-       "      <td>25590.3627</td>\n",
-       "      <td>14224.9705</td>\n",
-       "      <td>21681.7607</td>\n",
-       "      <td>11553.8851</td>\n",
-       "      <td>19115.7747</td>\n",
-       "      <td>9605.0590</td>\n",
-       "      <td>19701.9770</td>\n",
-       "      <td>9265.0000</td>\n",
-       "      <td>18654.0066</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3.664</td>\n",
-       "      <td>2419.8000</td>\n",
-       "      <td>3338.6656</td>\n",
-       "      <td>9907.5934</td>\n",
-       "      <td>15190.4262</td>\n",
-       "      <td>16085.8262</td>\n",
-       "      <td>23918.7869</td>\n",
-       "      <td>11455.3574</td>\n",
-       "      <td>18491.8328</td>\n",
-       "      <td>9818.6754</td>\n",
-       "      <td>...</td>\n",
-       "      <td>12899.0240</td>\n",
-       "      <td>25614.6693</td>\n",
-       "      <td>14244.6656</td>\n",
-       "      <td>21680.9148</td>\n",
-       "      <td>11571.4460</td>\n",
-       "      <td>19127.1264</td>\n",
-       "      <td>9641.4721</td>\n",
-       "      <td>19695.7475</td>\n",
-       "      <td>9266.9016</td>\n",
-       "      <td>18664.6492</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4.664</td>\n",
-       "      <td>2415.4656</td>\n",
-       "      <td>3343.8820</td>\n",
-       "      <td>9908.6787</td>\n",
-       "      <td>15212.5934</td>\n",
-       "      <td>16106.4426</td>\n",
-       "      <td>23934.4787</td>\n",
-       "      <td>11446.4656</td>\n",
-       "      <td>18490.1672</td>\n",
-       "      <td>9828.8918</td>\n",
-       "      <td>...</td>\n",
-       "      <td>12909.6613</td>\n",
-       "      <td>25609.7333</td>\n",
-       "      <td>14246.7311</td>\n",
-       "      <td>21671.7311</td>\n",
-       "      <td>11555.1149</td>\n",
-       "      <td>19118.9425</td>\n",
-       "      <td>9620.9180</td>\n",
-       "      <td>19704.7705</td>\n",
-       "      <td>9280.3475</td>\n",
-       "      <td>18673.2393</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 23 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Time (sec)  R1 W1 Avg  R1 W2 Avg  R2 W1 Avg   R2 W2 Avg   R3 W1 Avg  \\\n",
-       "0       0.664  2445.0492  3342.0525  9927.9246  15184.7836  16085.5311   \n",
-       "1       1.664  2424.8689  3339.6197  9915.3410  15203.4295  16093.9607   \n",
-       "2       2.664  2422.6590  3335.8262  9917.3541  15201.3541  16108.5639   \n",
-       "3       3.664  2419.8000  3338.6656  9907.5934  15190.4262  16085.8262   \n",
-       "4       4.664  2415.4656  3343.8820  9908.6787  15212.5934  16106.4426   \n",
-       "\n",
-       "    R3 W2 Avg   R4 W1 Avg   R4 W2 Avg  R5 W1 Avg  ...   R7 W1 Avg   R7 W2 Avg  \\\n",
-       "0  23916.5607  11463.5574  18456.5443  9834.1213  ...  12912.6907  25586.4747   \n",
-       "1  23946.0754  11476.7541  18489.5574  9807.4393  ...  12909.4293  25629.4907   \n",
-       "2  23909.5803  11449.5836  18483.8820  9808.9279  ...  12908.4587  25590.3627   \n",
-       "3  23918.7869  11455.3574  18491.8328  9818.6754  ...  12899.0240  25614.6693   \n",
-       "4  23934.4787  11446.4656  18490.1672  9828.8918  ...  12909.6613  25609.7333   \n",
-       "\n",
-       "    R8 W1 Avg   R8 W2 Avg   R9 W1 Avg   R9 W2 Avg  R10 W1 Avg  R10 W2 Avg  \\\n",
-       "0  14205.3705  21684.3443  11567.6713  19118.2644   9622.9311  19698.8066   \n",
-       "1  14208.0033  21716.1049  11565.6897  19167.4966   9621.0131  19754.7574   \n",
-       "2  14224.9705  21681.7607  11553.8851  19115.7747   9605.0590  19701.9770   \n",
-       "3  14244.6656  21680.9148  11571.4460  19127.1264   9641.4721  19695.7475   \n",
-       "4  14246.7311  21671.7311  11555.1149  19118.9425   9620.9180  19704.7705   \n",
-       "\n",
-       "   R11 W1 Avg  R11 W2 Avg  \n",
-       "0   9273.1803  18630.9607  \n",
-       "1   9281.7016  18690.1311  \n",
-       "2   9265.0000  18654.0066  \n",
-       "3   9266.9016  18664.6492  \n",
-       "4   9280.3475  18673.2393  \n",
-       "\n",
-       "[5 rows x 23 columns]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ImportError",
+     "evalue": "Missing optional dependency 'xlrd'. Install xlrd >= 1.0.0 for Excel support Use pip or conda to install xlrd.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "File \u001b[0;32m~/miniconda3/envs/neuroscience_beginner/lib/python3.10/site-packages/pandas/compat/_optional.py:141\u001b[0m, in \u001b[0;36mimport_optional_dependency\u001b[0;34m(name, extra, errors, min_version)\u001b[0m\n\u001b[1;32m    140\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m--> 141\u001b[0m     module \u001b[39m=\u001b[39m importlib\u001b[39m.\u001b[39;49mimport_module(name)\n\u001b[1;32m    142\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mImportError\u001b[39;00m:\n",
+      "File \u001b[0;32m~/miniconda3/envs/neuroscience_beginner/lib/python3.10/importlib/__init__.py:126\u001b[0m, in \u001b[0;36mimport_module\u001b[0;34m(name, package)\u001b[0m\n\u001b[1;32m    125\u001b[0m         level \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[0;32m--> 126\u001b[0m \u001b[39mreturn\u001b[39;00m _bootstrap\u001b[39m.\u001b[39;49m_gcd_import(name[level:], package, level)\n",
+      "File \u001b[0;32m<frozen importlib._bootstrap>:1050\u001b[0m, in \u001b[0;36m_gcd_import\u001b[0;34m(name, package, level)\u001b[0m\n",
+      "File \u001b[0;32m<frozen importlib._bootstrap>:1027\u001b[0m, in \u001b[0;36m_find_and_load\u001b[0;34m(name, import_)\u001b[0m\n",
+      "File \u001b[0;32m<frozen importlib._bootstrap>:1004\u001b[0m, in \u001b[0;36m_find_and_load_unlocked\u001b[0;34m(name, import_)\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'xlrd'",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 20\u001b[0m\n\u001b[1;32m     17\u001b[0m             list_dataframe\u001b[39m.\u001b[39mappend(data_frame)\n\u001b[1;32m     18\u001b[0m     \u001b[39mreturn\u001b[39;00m list_dataframe\n\u001b[0;32m---> 20\u001b[0m calcium_dataframes \u001b[39m=\u001b[39m load_data(\u001b[39m\"\u001b[39;49m\u001b[39m/Data/Calcium_Imaging/Plates\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n\u001b[1;32m     21\u001b[0m calcium_dataframes[\u001b[39m0\u001b[39m]\u001b[39m.\u001b[39mhead()\n",
+      "Cell \u001b[0;32mIn[3], line 16\u001b[0m, in \u001b[0;36mload_data\u001b[0;34m(path)\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m list_data:\n\u001b[1;32m     15\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39m\"\u001b[39m\u001b[39mxls\u001b[39m\u001b[39m\"\u001b[39m \u001b[39min\u001b[39;00m i:\n\u001b[0;32m---> 16\u001b[0m         data_frame \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39;49mread_excel(data_path \u001b[39m+\u001b[39;49m \u001b[39mf\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39m/\u001b[39;49m\u001b[39m{\u001b[39;49;00mi\u001b[39m}\u001b[39;49;00m\u001b[39m\"\u001b[39;49m, sheet_name \u001b[39m=\u001b[39;49m \u001b[39m\"\u001b[39;49m\u001b[39mSheet1\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n\u001b[1;32m     17\u001b[0m         list_dataframe\u001b[39m.\u001b[39mappend(data_frame)\n\u001b[1;32m     18\u001b[0m \u001b[39mreturn\u001b[39;00m list_dataframe\n",
+      "File \u001b[0;32m~/miniconda3/envs/neuroscience_beginner/lib/python3.10/site-packages/pandas/util/_decorators.py:211\u001b[0m, in \u001b[0;36mdeprecate_kwarg.<locals>._deprecate_kwarg.<locals>.wrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    209\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[1;32m    210\u001b[0m         kwargs[new_arg_name] \u001b[39m=\u001b[39m new_arg_value\n\u001b[0;32m--> 211\u001b[0m \u001b[39mreturn\u001b[39;00m func(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
+      "File \u001b[0;32m~/miniconda3/envs/neuroscience_beginner/lib/python3.10/site-packages/pandas/util/_decorators.py:331\u001b[0m, in \u001b[0;36mdeprecate_nonkeyword_arguments.<locals>.decorate.<locals>.wrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    325\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(args) \u001b[39m>\u001b[39m num_allow_args:\n\u001b[1;32m    326\u001b[0m     warnings\u001b[39m.\u001b[39mwarn(\n\u001b[1;32m    327\u001b[0m         msg\u001b[39m.\u001b[39mformat(arguments\u001b[39m=\u001b[39m_format_argument_list(allow_args)),\n\u001b[1;32m    328\u001b[0m         \u001b[39mFutureWarning\u001b[39;00m,\n\u001b[1;32m    329\u001b[0m         stacklevel\u001b[39m=\u001b[39mfind_stack_level(),\n\u001b[1;32m    330\u001b[0m     )\n\u001b[0;32m--> 331\u001b[0m \u001b[39mreturn\u001b[39;00m func(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
+      "File \u001b[0;32m~/miniconda3/envs/neuroscience_beginner/lib/python3.10/site-packages/pandas/io/excel/_base.py:482\u001b[0m, in \u001b[0;36mread_excel\u001b[0;34m(io, sheet_name, header, names, index_col, usecols, squeeze, dtype, engine, converters, true_values, false_values, skiprows, nrows, na_values, keep_default_na, na_filter, verbose, parse_dates, date_parser, thousands, decimal, comment, skipfooter, convert_float, mangle_dupe_cols, storage_options)\u001b[0m\n\u001b[1;32m    480\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39misinstance\u001b[39m(io, ExcelFile):\n\u001b[1;32m    481\u001b[0m     should_close \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m\n\u001b[0;32m--> 482\u001b[0m     io \u001b[39m=\u001b[39m ExcelFile(io, storage_options\u001b[39m=\u001b[39;49mstorage_options, engine\u001b[39m=\u001b[39;49mengine)\n\u001b[1;32m    483\u001b[0m \u001b[39melif\u001b[39;00m engine \u001b[39mand\u001b[39;00m engine \u001b[39m!=\u001b[39m io\u001b[39m.\u001b[39mengine:\n\u001b[1;32m    484\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[1;32m    485\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mEngine should not be specified when passing \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    486\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39man ExcelFile - ExcelFile already has the engine set\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    487\u001b[0m     )\n",
+      "File \u001b[0;32m~/miniconda3/envs/neuroscience_beginner/lib/python3.10/site-packages/pandas/io/excel/_base.py:1695\u001b[0m, in \u001b[0;36mExcelFile.__init__\u001b[0;34m(self, path_or_buffer, engine, storage_options)\u001b[0m\n\u001b[1;32m   1692\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mengine \u001b[39m=\u001b[39m engine\n\u001b[1;32m   1693\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mstorage_options \u001b[39m=\u001b[39m storage_options\n\u001b[0;32m-> 1695\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_reader \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_engines[engine](\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_io, storage_options\u001b[39m=\u001b[39;49mstorage_options)\n",
+      "File \u001b[0;32m~/miniconda3/envs/neuroscience_beginner/lib/python3.10/site-packages/pandas/io/excel/_xlrd.py:34\u001b[0m, in \u001b[0;36mXlrdReader.__init__\u001b[0;34m(self, filepath_or_buffer, storage_options)\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m     25\u001b[0m \u001b[39mReader using xlrd engine.\u001b[39;00m\n\u001b[1;32m     26\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     31\u001b[0m \u001b[39m{storage_options}\u001b[39;00m\n\u001b[1;32m     32\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m     33\u001b[0m err_msg \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mInstall xlrd >= 1.0.0 for Excel support\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m---> 34\u001b[0m import_optional_dependency(\u001b[39m\"\u001b[39;49m\u001b[39mxlrd\u001b[39;49m\u001b[39m\"\u001b[39;49m, extra\u001b[39m=\u001b[39;49merr_msg)\n\u001b[1;32m     35\u001b[0m \u001b[39msuper\u001b[39m()\u001b[39m.\u001b[39m\u001b[39m__init__\u001b[39m(filepath_or_buffer, storage_options\u001b[39m=\u001b[39mstorage_options)\n",
+      "File \u001b[0;32m~/miniconda3/envs/neuroscience_beginner/lib/python3.10/site-packages/pandas/compat/_optional.py:144\u001b[0m, in \u001b[0;36mimport_optional_dependency\u001b[0;34m(name, extra, errors, min_version)\u001b[0m\n\u001b[1;32m    142\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mImportError\u001b[39;00m:\n\u001b[1;32m    143\u001b[0m     \u001b[39mif\u001b[39;00m errors \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mraise\u001b[39m\u001b[39m\"\u001b[39m:\n\u001b[0;32m--> 144\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mImportError\u001b[39;00m(msg)\n\u001b[1;32m    145\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[1;32m    146\u001b[0m         \u001b[39mreturn\u001b[39;00m \u001b[39mNone\u001b[39;00m\n",
+      "\u001b[0;31mImportError\u001b[0m: Missing optional dependency 'xlrd'. Install xlrd >= 1.0.0 for Excel support Use pip or conda to install xlrd."
+     ]
     }
    ],
    "source": [
@@ -616,9 +436,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "neuroscience_beginner",
    "language": "python",
-   "name": "python3"
+   "name": "neuroscience_beginner"
   },
   "language_info": {
    "codemirror_mode": {
@@ -630,7 +450,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15 (main, Nov 24 2022, 08:28:41) \n[Clang 14.0.6 ]"
+   "version": "3.10.8 (main, Nov 24 2022, 08:08:27) [Clang 14.0.6 ]"
   },
   "vscode": {
    "interpreter": {
