--- a/Scripts/instrcuted_single_cell_analysis.ipynb
+++ b/Scripts/instrcuted_single_cell_analysis.ipynb
@@ -61,6 +61,7 @@
    "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "84ae92b7",
    "metadata": {},
@@ -93,11 +94,12 @@
    "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "534cd69a",
    "metadata": {},
    "source": [
-    "A very typical characteristic of the single cell sequencing results is the unnormal distribution of gene counts per cell. <br/>\n",
+    "A very typical characteristic of the single cell sequencing results is the non-normal distribution of gene counts per cell. <br/>\n",
     "To display the data distribution, we will count the number of gene counts per cell and store them in a list.<br/>\n",
     "<ol>\n",
     "    <li> Create a list with sums of all row values per column (== gene counts per cell) using .sum().values </li>\n",
